# artie

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs
copy_srv/: Cargo.toml
copy_srv/src/: actor.rs  lib.rs
db/: Cargo.toml
db/src/: copy_operation.rs  host.rs  lib.rs  optical_drive.rs  title.rs  transcode_operation.rs  video.rs
faux_makemkv/: Cargo.toml
faux_makemkv/src/: main.rs
fs/: Cargo.toml
fs/src/: error.rs  lib.rs  utils.rs
handbrake/: Cargo.toml
handbrake/src/: command.rs  error.rs  lib.rs  output.rs
handbrake/src/output/: json.rs  parser.rs
makemkv/: Cargo.toml
makemkv/src/: commands.rs  data.rs  error.rs  lib.rs  messages.rs  test_utils.rs
makemkv/src/commands/: info.rs  mkv.rs
model/: Cargo.toml
model/src/: lib.rs
optical_drive/: Cargo.toml
optical_drive/src/: faux.rs  lib.rs  linux.rs  optical_drive.rs
optical_drive/src/optical_drive/: linux.rs
resources/: resources.gresource.xml
resources/css/: app.css
resources/ui/: copy_page.ui  drive.ui  window.ui
src/: actor.rs  app.rs  bus.rs  compress.rs  context.rs  copy_srv.rs  error.rs  fs.rs  main.rs  models.rs  path.rs  screen.rs  settings.rs  task.rs  test_utils.rs  theme.rs  views.rs  widget.rs
src/db/: conv.rs  copy_operation.rs  host.rs  mod.rs  optical_drive.rs  title.rs  transaction.rs  transcode_operation.rs  video.rs
src/drive/: actor.rs  copy.rs  data.rs  faux.rs  linux.rs  makemkv.rs  manager.rs  mod.rs  monitor.rs  worker.rs
src/drive/actor/: handle.rs  local.rs  manager.rs  mod.rs  worker.rs
src/drive/glib/: mod.rs  optical_drive.rs  optical_drive_state.rs
src/net/: actor.rs  client.rs  messages.rs  mod.rs  protocol.rs  server.rs
src/net/client/: manager.rs  mod.rs
src/screen/: copy.rs  settings.rs  transcode.rs
src/screen/copy/: drive.rs  form.rs
src/theme/: color.rs  palette.rs
src/ui/: app.rs  context.rs  helpers.rs  mod.rs  workers.rs
src/ui/data/: drive.rs  enums.rs  mod.rs  optical_drive.rs
src/ui/page/: catalog.rs  copy.rs  mod.rs  transcode.rs
src/ui/screens/: mod.rs  settings.rs  transcode.rs
src/ui/screens/copy/: drive.rs  form.rs  mod.rs
src/ui/theme/: mod.rs  palette.rs
src/ui/widget/: copy_form.rs  copy_page.rs  drive.rs  icon_button.rs  mod.rs  transcode_filter.rs  transcode_list.rs  transcode_page.rs  window.rs
src/ui/widgets/: button.rs  container.rs  dialog.rs  icon.rs  menu.rs  mod.rs  pick_list.rs  progress_bar.rs  rule.rs  scrollable.rs  slider.rs  text.rs  text_input.rs
src/views/: copy.rs  transcode.rs
src/widget/: animation.rs  button.rs  container.rs  dialog.rs  icon.rs  menu.rs  pick_list.rs  progress_bar.rs  rule.rs  scrollable.rs  slider.rs  text.rs  text_input.rs
