[package]
name = "artie"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[workspace]
resolver = "3"
members = [ "handbrake", "makemkv" ]

[workspace.package]
authors = [ "Kevin Fisher" ]
edition = "2024"
license = "GPL-3.0-only"
version = "0.1.0"

# TODO: With the project being consolidated, could these be moved to the
#       non-workspace dependencies with the exception of the few used by makemkv
#       and handbrake libraries.
[workspace.dependencies]
blake3 = "1.8.2"
chrono = "0.4.42"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
toml = "0.9.7"
tracing = "0.1"
tracing-subscriber = "0.3"

# TODO: Revisit faux drives once release is ready.
[features]
default = ["faux_drives"]
faux_drives = []

[dependencies.blake3]
workspace = true

[dependencies.chrono]
workspace = true

[dependencies.gtk]
version = "0.10.3"
package = "gtk4"
features = ["v4_14"]

[dependencies.rusqlite ]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.toml]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.tracing-subscriber]
workspace = true

[lints.rust]
# TODO: Remove these once initial development has completed!
unused_imports = "allow"
dead_code = "allow"

[build-dependencies]
glib-build-tools = "0.21.0"
