[package]
name = "copy_srv"
description = "Service for copying media."
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies.optical_drive]
path = "../optical_drive"

[dev-dependencies.optical_drive]
path = "../optical_drive"
features = ["faux_drives"]
