[package]
name = "copy_srv"
description = "Service for copying media."
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies.chrono]
workspace = true

[dependencies.db]
path = "../db"

[dependencies.gethostname]
workspace = true

[dependencies.fs]
path = "../fs"

[dependencies.model]
path = "../model"

[dependencies.optical_drive]
path = "../optical_drive"

[dependencies.makemkv]
path = "../makemkv"

[dependencies.tokio]
workspace = true

[dependencies.tracing]
workspace = true

[dev-dependencies.optical_drive]
path = "../optical_drive"
features = ["faux_drives"]
