[package]
name = "db"
description = "Handles database operations."
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
rusqlite = { workspace = true }
model = { path = "../model" }
serde = { workspace = true }
tracing = { workspace = true }
